# software-host

./: .gitignore  .pre-commit-config.yaml  Mutenix.spec  README.md  macropad.py  pyproject.toml  pytest.ini  test_update.py
.github/workflows/: pre-release.yml  pytest.yml  release.yml
docs/: configuration.md  mutenix.schema.json
scripts/: bump_version.sh  prepare_release.sh  upgrade.py
src/mutenix/: __init__.py  __main__.py  actions.py  config.py  hid_commands.py  hid_device.py  macropad.py  teams_messages.py  tray_icon.py  updates.py  utils.py  version.py  virtual_macropad.py  web_server.py  websocket_client.py
src/mutenix/models/: config.py  config_v0.py  state.py
src/mutenix/static/: script.js
src/mutenix/static/css/: styles.css
src/mutenix/static/highlight/: highlight.js
src/mutenix/static/highlight/languages/: yaml.js
src/mutenix/static/highlight/styles/: agate.css  arduino-light.css  arta.css  ascetic.css  brown-paper.css  codepen-embed.css  color-brewer.css  dark.css  default.css  devibeans.css  docco.css  far.css  felipec.css  foundation.css  github-dark-dimmed.css  github-dark.css  gml.css  gradient-light.css  grayscale.css  hybrid.css  intellij-light.css  ir-black.css  isbl-editor-dark.css  isbl-editor-light.css  kimbie-dark.css  kimbie-light.css  lightfair.css  lioshi.css  magula.css  mono-blue.css  nnfx-dark.css  panda-syntax-light.css  paraiso-dark.css  paraiso-light.css  pojoaque.css  purebasic.css  rainbow.css  routeros.css  school-book.css  stackoverflow-dark.css  (+3 more)
src/mutenix/static/highlight/styles/base16/: 3024.css  apathy.css  apprentice.css  ashes.css  atelier-cave-light.css  atelier-cave.css  atelier-dune-light.css  atelier-dune.css  atelier-estuary-light.css  atelier-estuary.css  atelier-forest-light.css  atelier-forest.css  atelier-heath-light.css  atelier-heath.css  atelier-lakeside-light.css  atelier-lakeside.css  atelier-plateau-light.css  atelier-plateau.css  atelier-savanna-light.css  atelier-savanna.css  atlas.css  (+154 more)
src/mutenix/static/js/: script.js
src/mutenix/templates/: about.html  base.html  config.html  five_button.html  help.html  index.html  keypads.html  links.html  popup.html  ten_button.html  version.html
src/mutenix/updates/: __init__.py  chunks.py  constants.py  device_messages.py  device_update.py
src/mutenix/utils/: config_converter.py  windows.py
src/mutenix/webserver/: __init__.py  api.py  browser.py  helper.py  model.py  pages.py  static.py  virtual_macropad.py  websocket.py
tests/: conftest.py  test_actions.py  test_config.py  test_device_update_log_messages.py  test_hid_commands.py  test_hid_device.py  test_macropad.py  test_main.py  test_tray_icons.py  test_updates.py  test_utils.py  test_virtual_macropad.py  test_web_server.py  test_webserver_api.py  test_webserver_browser.py  test_webserver_pages.py  test_webserver_websocket.py  test_websocket_client.py
