[project]
name = "mutenix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
     "hidapi",
     "websockets",
     "pydantic",
     "requests",
     "pywin32; platform_system=='Windows'",
     "pywinauto; platform_system=='Windows'",
     "aiohttp",
     "tqdm",
     "semver",
]

[project.scripts]
hello = "mutenix:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
